Fixed bugs and sonar issues